# ying

./: .actrc  .cursorrules  .dockerignore  .gitignore  .secrets.example  CHUNK_NOTES.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.test.yml  pyproject.toml
.github/: LOCAL_TESTING.md  README.md
.github/events/: pull_request.json  push.json
.github/scripts/: test-local.sh  test-pr.sh  test-workflow.sh
.github/workflows/: ci-local.yml  ci.yml  pr-trusted.yml  pr-untrusted.yml  quick-test.yml  security.yml
app/: __init__.py  config.py  ffmpeg.py  logging_setup.py  main.py  metrics.py  middleware.py  scheduler.py  tracing.py  worker.py
app/db/: __init__.py  migrate.py  repo.py
app/db/migrations/: 0001_init.sql  __init__.py
app/recognizers/: acoustid_recognizer.py  base.py  shazamio_recognizer.py
app/web/: routes.py
app/web/static/: app.css
app/web/templates/: day_view.html  diagnostics.html
docs/: INTEGRATION_TESTS.md
examples/: test_live_recognition.py
tests/: __init__.py  conftest.py
tests/data/: acoustid_fixtures.json  convert_audio.py  generate_sample.py  shazam_fixtures.json
tests/integration/: __init__.py  test_app_startup.py  test_recognizers_live.py
tests/unit/: __init__.py  test_config.py  test_db_migrate.py  test_db_repo.py  test_ffmpeg.py  test_logging_setup.py  test_main_app.py  test_metrics.py  test_middleware.py  test_recognizers_acoustid.py  test_recognizers_parallel.py  test_recognizers_shazamio.py  test_scheduler.py  test_startup_regression.py  test_tracing.py  test_web_diagnostics.py  test_web_routes.py  test_worker.py
